<resources>
    <string name="app_name">AndroidLibrary</string>
    <string name="book_library">Book Library</string>
    <string name="lorem_ipsum15">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris facilisis elementum nibh. Vestibulum eu posuere.</string>
    <string name="author">Author</string>
    <string name="name">Name</string>
    <string name="nextBtn">Next</string>
    <string name="backBtn">Back</string>
    <string name="menu">Menu</string>
    <string name="book_ic">book_ic</string>
    <string name="deletebookbtn">deleteBookBtn</string>
    <string name="book">Book</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
</resources>