<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/itemBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:lines="1"
        android:ellipsize="end"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/bookImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bookImageView"
        app:layout_constraintStart_toStartOf="@+id/itemBookTitle"
        app:layout_constraintTop_toBottomOf="@+id/itemBookTitle"
        tools:text="@string/author" />

    <ImageView
        android:id="@+id/bookImageView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_book_photo"
        android:contentDescription="@string/book_ic"/>

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/deletebookbtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>